--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gatsby": "^4.19",
     "gatsby-plugin-gatsby-cloud": "^4.18.1",
     "gatsby-plugin-image": "^2.19.0",
+    "gatsby-plugin-multi-language-sitemap": "^1.1.0",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sitemap": "^6.8.0",
     "gatsby-plugin-styled-components": "^5.19.0",
@@ -33,8 +35,7 @@
     "react-helmet": "^6.1.0",
     "react-is": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
-    "styled-components": "^5.3.5",
-    "gatsby-plugin-netlify": "^5.1.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "babel-jest": "^28.1.3",
