--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-multi-language-sitemap": "^1.1.0",
     "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.12.1",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.8.0",
     "gatsby-plugin-styled-components": "^5.19.0",
     "gatsby-source-datocms": "^4.0.4",
